--- a/wwwroot/Demo/index.html
+++ b/wwwroot/Demo/index.html
@@ -10,55 +10,76 @@
     <link href="/assets/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/css/color.css" rel="stylesheet">
     <script src="/assets/js/jquery-1.11.1.min.js"></script>
-    <style type="text/css">
-        .error{
-            color:red;
-            font-weight: bold;
+    <style>
+        .centaton {
+            height:140px;
+        }
+        .pleft10 {
+            padding-left: 10px;
         }
     </style>
 </head>
 <body>
 
 
-
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                </div>
+        <div class="col-sm-12 col-md-12">
+            <div class="page-header">
+                <h1>Tables</h1>
             </div>
         </div>
-        <div class="col-sm-6 col-md-3">
+
+        <div class="col-sm-6 col-md-3 col-lg-2">
             <div class="thumbnail">
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                <div class="caption centaton">
+                    <h3>系统</h3>
+                    <p>独立完整立完完整的系统独立完整立完完整的系立完完整的系统,独完</p>
                 </div>
             </div>
         </div>
 
+        <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="thumbnail">
+                <div class="caption centaton">
+                    <h3>Thumbnail label</h3>
+                    <p>独立完整立完完整的系统独立完整立完完整的系立完完整的系统,独完</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="thumbnail">
+                <div class="caption centaton">
+                    <h3>Thumbnail label</h3>
+                    <p>独立完整立完完整的系统独立完整立完完整的系立完完整的系统,独完</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="thumbnail">
+                <div class="caption centaton">
+                    <h3>Thumbnail label</h3>
+                    <p>独立完整立完完整的系统独立完整立完完整的系立完完整的系统,独完</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="thumbnail">
+                <div class="caption centaton">
+                    <h3>Thumbnail label</h3>
+                    <p>独立完整立完完整的系统独立完整立完完整的系立完完整的系统,独完</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3 col-lg-2">
+            <div class="thumbnail">
+                <div class="caption centaton">
+                    <h3 class="glyphicon glyphicon-search "><a class="pleft10" href="">系统管理</a></h3>
+                    <p>对本系统进行设置,维护和管理</p>
+                </div>
+            </div>
+        </div>
     </div>
-
-
 </div>
 
 <!-- Bootstrap core JavaScript -->
@@ -66,12 +87,6 @@
 <script src="/assets/js/Sham.js"></script>
 <script type="text/javascript">
     $(document).ready(function(e) {
-        $('#admintip').on('close.bs.alert', function () {
-            alert('1');
-        });
-        $('#admintip').on('closed.bs.alert', function () {
-            alert('2');
-        });
     });
 </script>
 </body>
